--- a/src/assets/scss/components/icons.scss
+++ b/src/assets/scss/components/icons.scss
@@ -1,10 +1,10 @@
 /*-------------- icons -----------------*/
 .icon{
 	display: inline-block;
-	vertical-align: middle;
+	vertical-align: top;
 	max-width: 100%;
 	max-height: 100%;
-	fill: #404040;
+	fill: $color-text;
 
 	&.ic-white{
 		fill: #fff;
@@ -14,10 +14,4 @@
 		stroke: $color-text;
 		fill: transparent;
 	}
-
-	// &.ic-outgoing-call{fill: $color-orange;}
-	// &.ic-incoming-call{fill: #48B26B;}
-	// &.ic-missed-call{fill: $color-red;}
-
-	// &.ic-reset-grey{fill: #ececec;}
 }
