--- a/src/pug/pages/tipografika.pug
+++ b/src/pug/pages/tipografika.pug
@@ -83,5 +83,15 @@ block content
 				.type-icon
 					.type-icon__item
 						.type-icon__img
-							+svg('ic-twitter','ic-twitter', '17', '14')
-						.type-icon__name ic-twitter
+							+svg('ic-call','ic-call', '20', '20')
+						.type-icon__name ic-call
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-mail','ic-mail', '26', '21')
+						.type-icon__name ic-mail
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-address','ic-address', '18', '21')
+						.type-icon__name ic-address
