--- a/src/pug/pages/tipografika.pug
+++ b/src/pug/pages/tipografika.pug
@@ -80,6 +80,18 @@ block content
 				br
 				br
 				div.h2 Иконки
+				.type-icon.type-icon_white
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-hand','ic-hand', '18', '35')
+						.type-icon__name ic-hand
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-money','ic-money', '38', '26')
+						.type-icon__name ic-money
+
+
 				.type-icon
 					.type-icon__item
 						.type-icon__img
@@ -95,3 +107,17 @@ block content
 						.type-icon__img
 							+svg('ic-address','ic-address', '18', '21')
 						.type-icon__name ic-address
+
+					
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-compass','ic-compass', '30', '30')
+						.type-icon__name ic-compass
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-copy','ic-copy', '21', '28')
+						.type-icon__name ic-copy
+
+					
