--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -11,6 +11,8 @@ $color-grey-light: #dbe1ea;
 $color-red: #e31e24;
 $color-dark-red: #cc1a20;
 $color-green: #6ac074;
+$color-dark-green: #18aa29;
+$color-yellow: #fda700;
 
 
 $grid-breakpoints: (
