--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -50,18 +50,131 @@ block content
 				.col-12
 					.h1 Как оформить займ?
 
-					.step-list
+					.step-list.js-step-list
 						-
 							var list=[
 								{icon:'ic-hand', icon_width:'18', icon_height:'35', text:'Оставьте онлайн-заявку'},
 								{icon:'ic-compass', icon_width:'30', icon_height:'30', icon_color:'light-red', text:'Дождитесь одобрения'},
 								{icon:'ic-copy', icon_width:'21', icon_height:'28', icon_color:'yellow', text:'Подпишите договор'},
-								{icon:'ic-money', icon_width:'38', icon_height:'26', icon_color:'green', text:'Получите деньги'},
+								{icon:'ic-money', icon_width:'38', icon_height:'26', icon_color:'dark-green', text:'Получите деньги', arr:'false'},
 							]
 
 						each item in list
-							.step-list__item
-								.step-list__icon
+							.step-list__item.js-step-list-item(class=item.animate?'animate':'')
+								.step-list__icon(class=item.icon_color?'step-list__icon_'+item.icon_color:'')
 									+svg(item.icon, item.icon, item.icon_width, item.icon_height)
 
 								.step-list__text= item.text
+
+								if(item.arr != 'false')
+									.step-list__arr
+										+svg('ic-arrow','ic-arrow', '39', '37')
+
+
+	section.text-block-wrap.bg-light-blue
+		.container
+			.row
+				.col-12
+					.h1 Где взять деньги в долг? н1
+
+					.text-block
+						p Микрозаём — это небольшой кредит наличными, выдаваемый микрокредитными организациями. Больше всего такой вид займа подходит для потребительских нужд, когда деньги требуются срочно и нет возможности у кого-либо взять в долг до зарплаты. Микрозаймы выдаются на непродолжительные сроки и на максимально упрощенных условиях.
+
+						h2 выдача денег в долг до зарплаты Н2
+						p Микрозаём — это небольшой кредит наличными, выдаваемый микрокредитными организациями. Больше всего такой вид займа подходит для потребительских нужд, когда деньги требуются срочно и нет возможности у кого-либо взять в долг до зарплаты. Микрозаймы выдаются на непродолжительные сроки и на максимально упрощенных условиях.
+
+						h3 Лояльные требования Н3
+						p Микрозаём — это небольшой кредит наличными, выдаваемый микрокредитными организациями. Больше всего такой вид займа подходит для потребительских нужд, когда деньги требуются срочно и нет возможности у кого-либо взять в долг до зарплаты. Микрозаймы выдаются на непродолжительные сроки и на максимально упрощенных условиях.
+
+						h3 Выгодный займ – лучшее решение всех финансовых вопросов  Н3
+						p Главная цель обращения клиента в компанию – быстро получить необходимую сумму под низкий процент. Предпосылки возникновения потребности в деньгах различны:
+
+						ul
+							li поехать в путешествие заграницу;
+							li пройти курс лечения в санатории;
+							li поехать в путешествие заграницу;
+							li открыть небольшой бизнес;
+							li сделать ремонт.
+
+	section.review-wrap
+		.container
+			.row
+				.col-12
+					.review-wrap__top
+						.h1 Отзывы
+
+						.review-slider-arr.js-review-slider-arr
+
+		.review-slider.js-review-slider
+			-
+				var list=[
+					{img:'author1.jpg', name:'Антонина Васильевна Ильина', text:'Выручили во время неотложной ситуации. Быстрое рассмотрение, моментальный перевод.'},
+					{img:'author2.jpg', name:'Иван Андреевич Иванов', text:'Срочно понадобились деньги. Оформили и одобрили очень быстро без лишних проблем и заморочек. Качественное обслуживание.'},
+					{img:'author3.jpg', name:'Александра Ильинишна Немоляева', text:'Беру деньги не первый раз. Нахожусь в декрете и кредиты не дают. Но срочно понадобилось деньги, одобрили. Вернула в срок и пользовалась ещё несколько раз. '},
+					{img:'author2.jpg', name:'Иван Андреевич Иванов', text:'Срочно понадобились деньги. Оформили и одобрили очень быстро без лишних проблем и заморочек. Качественное обслуживание.'},
+					{img:'author3.jpg', name:'Александра Ильинишна Немоляева', text:'Беру деньги не первый раз. Нахожусь в декрете и кредиты не дают. Но срочно понадобилось деньги, одобрили. Вернула в срок и пользовалась ещё несколько раз. '},
+					{img:'author1.jpg', name:'Антонина Васильевна Ильина', text:'Выручили во время неотложной ситуации. Быстрое рассмотрение, моментальный перевод.'},
+					{img:'author2.jpg', name:'Иван Андреевич Иванов', text:'Срочно понадобились деньги. Оформили и одобрили очень быстро без лишних проблем и заморочек. Качественное обслуживание.'},
+				]
+
+			each item in list
+				.review-slider__item
+					.review-slider__top
+						.review-slider__img(style="background-image: url(assets/img/"+item.img+")")
+						.review-slider__name= item.name
+
+					.review-slider__text= item.text
+
+	section.faq-wrap.bg-light-blue
+		.container
+			.row
+				.col-12
+					.h1 FAQ
+
+					-
+						var list=[
+							{question:'Вы можете получить кредит, если', answer:'Единственно верное решение материальных проблем – восполнить нехватку денежных средств. Проблемы бывают микро и макро масштаба. Проверенный план действий, разработанный специалистами компании, помогает устранить трудности, превращая их в возможности. «Центрофинанс» предлагает несколько вариантов микрозаймов, применимых для конкретной финансовой задачи'},
+							{question:'На какие цели можно взять кредит?', answer:'Текст'},
+							{question:'На какие цели можно взять кредит?', answer:'Текст'},
+							{question:'На какие цели можно взять кредит?', answer:'Текст'},
+						]
+
+					each item in list
+						.unwrap-block.js-unwrap-block
+							.unwrap-block__head.js-unwrap-head
+								.unwrap-block__title= item.question
+								.unwrap-block__btn.js-unwrap-block-btn
+									+svg('ic-plus','ic-plus', '18', '18')
+									+svg('ic-minus','ic-minus', '18', '2')
+
+							.unwrap-block__content.js-unwrap-content
+								.unwrap-block__subtitle Ответ:
+								p= item.answer
+
+	section.mark-wrap
+		.container
+			.row
+				.col-12
+					.h1 Рейтинг компании
+
+			.row
+				-
+					var list=[
+						{logo:'ya.jpg', num:'4.7', text:'Оценок : 10'},
+						{logo:'zoon.jpg', num:'4.7', text:'Оценок : 10'},
+						{logo:'yahoo.jpg', num:'4.7', text:'Оценок : 10'},
+					]
+
+				each item in list
+					.col-4
+						.mark
+							.mark__icon
+								img(src="assets/img/"+item.logo, alt="")
+							.mark__content
+								.mark__rating
+									.mark__num= item.num 
+
+									.rating
+										.rating__content(style="width:76%")
+
+								.mark__text= item.text
