--- a/src/pug/pages/tipografika.pug
+++ b/src/pug/pages/tipografika.pug
@@ -21,9 +21,9 @@ block content
 				p
 					a(href='#') Это стандартная ссылка
 
-				p Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+				p Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.
 
-				p По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
+				p По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
 
 				br
 				br
@@ -79,6 +79,28 @@ block content
 
 				br
 				br
+				br
+				.h2 Раскрывающийся блок
+				.unwrap-block.js-unwrap-block
+					.unwrap-block__head.js-unwrap-head
+						.unwrap-block__title Вы можете получить кредит, если
+						.unwrap-block__btn.js-unwrap-block-btn
+							+svg('ic-plus','ic-plus', '18', '18')
+							+svg('ic-minus','ic-minus', '18', '2')
+
+					.unwrap-block__content.js-unwrap-content
+						.unwrap-block__subtitle Ответ:
+						p Единственно верное решение материальных проблем – восполнить нехватку денежных средств. Проблемы бывают микро и макро масштаба. Проверенный план действий, разработанный специалистами компании, помогает устранить трудности, превращая их в возможности. «Центрофинанс» предлагает несколько вариантов микрозаймов, применимых для конкретной финансовой задачи
+
+				
+				br
+				br
+				div.h2 Раск
+				.bg-light-blue(style="padding: 20px;")
+					|По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
+
+				br
+				br
 				div.h2 Иконки
 				.type-icon.type-icon_white
 					.type-icon__item
@@ -108,8 +130,6 @@ block content
 							+svg('ic-address','ic-address', '18', '21')
 						.type-icon__name ic-address
 
-					
-
 					.type-icon__item
 						.type-icon__img
 							+svg('ic-compass','ic-compass', '30', '30')
@@ -120,4 +140,27 @@ block content
 							+svg('ic-copy','ic-copy', '21', '28')
 						.type-icon__name ic-copy
 
-					
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-arrow','ic-arrow', '37', '14')
+						.type-icon__name ic-arrow
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-arrow-left','ic-arrow-left', '8', '14')
+						.type-icon__name ic-arrow-left
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-arrow-right','ic-arrow-right', '8', '14')
+						.type-icon__name ic-arrow-right
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-minus','ic-minus', '18', '2')
+						.type-icon__name ic-minus
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-plus','ic-plus', '18', '18')
+						.type-icon__name ic-plus
