--- a/src/assets/scss/components/step-list.scss
+++ b/src/assets/scss/components/step-list.scss
@@ -1,4 +1,38 @@
 /*-------------- step-list -----------------*/
+.steps{
+	margin: 110px 0;
+	
+	.h1, h1{margin-bottom: 3.5rem;}
+}
+
+@keyframes flipInY {
+	from {
+		transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		animation-timing-function: ease-in;
+		opacity: 0;
+	}
+
+	40% {
+		transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		animation-timing-function: ease-in;
+	}
+
+	60% {
+		transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		opacity: 1;
+	}
+
+	80% {
+		transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+		opacity: 1;
+	}
+
+	to {
+		transform: perspective(400px);
+		opacity: 1;
+	}
+}
+
 .step-list{
 	display: flex;
 	flex-wrap: wrap;
@@ -11,15 +45,22 @@
 		margin: 20px;
 		border-radius: 10px;
 		border: 1px solid $color-grey-light;
-		padding: 40px 35px;
+		padding: 40px 35px 50px;
+		background: #fff;
+		position: relative;
+		opacity: 0;
 	}
 
 	&__icon{
 		display: inline-flex;
 		align-items: center;
 		justify-content: center;
+		width: 52px;
+		height: 52px;
+		border-radius: 50%;
+		background: $color-red;
 		padding: 5px;
-		margin-bottom: 20px;
+		margin-bottom: 27px;
 
 		.icon{
 			max-height: 100%;
@@ -27,7 +68,53 @@
 		}
 	}
 
+	&__icon_light-red{background: #ff5935;}
+	&__icon_yellow{background: $color-yellow;}
+	&__icon_dark-green{background: $color-dark-green;}
+
 	&__text{
+		max-width: 175px;
 		@include font(normal, bold, 2rem, 1.3, $color-text);
+	}
+
+	&__arr{
+		display: inline-block;
+		width: 37px;
+		height: 14px;
+		position: absolute;
+		@include top-center;
+		left: 100%;
+	}
+
+	&__arr::before{
+		content: '';
+		display: inline-block;
+		width: 24px;
+		height: 24px;
+		border-radius: 50%;
+		background: #fff;
+		box-shadow: 0px 0px 10px #C2C9D7;
+		position: absolute;
+		top: 50%;
+		left: -12px;
+	}
+
+	&__arr::after{
+		content: '';
+		display: inline-block;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		background: $color-green;
+		position: absolute;
+		top: 50%;
+		left: -4px;
+		margin-top: 8px;
+	}
+
+	&.animate &__item{
+		backface-visibility: visible !important;
+		animation: flipInY 1s ease-in-out;
+		animation-fill-mode: forwards;
 	}
 }
