--- a/src/assets/scss/components/faq.scss
+++ b/src/assets/scss/components/faq.scss
@@ -1,2 +1,6 @@
 /*-------------- faq -----------------*/
 .faq-wrap{padding: 82px 0;}
+
+@media (max-width: 767px) {
+	.faq-wrap{padding: 52px 0 36px;}
+}
