--- a/src/assets/scss/components/top-block.scss
+++ b/src/assets/scss/components/top-block.scss
@@ -41,3 +41,39 @@
 		margin-bottom: -130px;
 	}
 }
+
+@media (max-width: 991px) {
+	.top-block{
+		padding-top: 10px;
+
+		&__info{max-width: 100%;}
+
+		&::before{
+			width: 100%;
+			height: 224px;
+			background: url(../img/girl-mobile.png) no-repeat center;
+			position: static;
+		}
+
+		.form-calc{margin-top: 50px;}
+	}
+}
+
+@media (max-width: 767px) {
+	.text-block-wrap{
+		margin-top: 30px;
+		padding: 48px 0;
+	}
+
+	.top-block{
+		padding-top: 0;
+		margin-bottom: 284px;
+
+		&__title{font-size: 2.8rem;}
+
+		.form-calc{
+			margin-top: 30px;
+			margin-bottom: -245px;
+		}
+	}
+}
