--- a/src/assets/scss/layouts/footer.scss
+++ b/src/assets/scss/layouts/footer.scss
@@ -76,3 +76,55 @@
 	border-top: 1px solid rgba(255,255,255,0.2);
 	font-size: 1.4rem;
 }
+
+.footer-contact-wrap{
+	display: flex;
+	justify-content: space-between;
+}
+
+@media (max-width: 991px) {
+	.footer-contact-wrap{flex-wrap: wrap;}
+}
+
+@media (max-width: 767px) {
+	.footer{padding: 30px 0;}
+	
+	.footer-top{
+		display: block;
+		margin: 0;
+		padding: 0;
+
+		&__logo{
+			margin: 0 0 30px;
+			padding: 14px 18px;
+
+			img{max-width: 127px;}
+		}
+	}
+
+	.footer-contact-wrap{
+		border-top: 1px solid rgba(255,255,255,0.2);
+		padding: 10px 0;
+	}
+
+	.footer-contact{
+		display: block;
+		margin-left: 0;
+		margin-right: 0;
+
+		&__icon,
+		&__label{
+			display: none;
+		}
+
+		&__phone{font-size: 1.8rem;}
+		&__note{margin-top: 4px;}
+	}
+
+	.footer-polit{
+		font-size: 1.2rem;
+		line-height: 1.67;
+		padding: 0;
+		border-top: 0;
+	}
+}
