--- a/src/assets/scss/layouts/main.scss
+++ b/src/assets/scss/layouts/main.scss
@@ -147,3 +147,50 @@ button.btn:hover{
 .text-bold {font-weight: 700 !important;}
 
 .bg-light-blue{background: #f9f8ff;}
+
+@media (max-width: 767px) {
+	body{
+		font-size: 1.4rem;
+		line-height: 1.7;
+	}
+
+	body .container{
+		max-width: 100%!important;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	main{padding-bottom: 30px;}
+
+	.btn,
+	input[type="submit"].btn,
+	button.btn{
+		height: 4rem;
+		line-height: 3.8rem;
+	}
+
+	h1, .h1{
+		font-size: 2.4rem;
+		line-height: 1.2;
+		margin-bottom: 3rem;
+	}
+
+	h2, .h2{
+		font-size: 2rem;
+		line-height: 1.2;
+		margin-bottom: 2rem;
+	}
+
+	h3, .h3{
+		font-size: 1.6rem;
+		line-height: 1.2;
+		margin-bottom: 2rem;
+	}
+
+	h4, .h4{font-size: 1.5rem;}
+	h5, .h5{font-size: 1.4rem;}
+
+	p{margin-bottom: 3rem;}
+
+	p + .h2, p + .h3, p + h2, p + h3{margin-top: 3rem;}
+}
