--- a/src/pug/layout/footer.pug
+++ b/src/pug/layout/footer.pug
@@ -7,32 +7,53 @@ footer.footer
 						a(href="/")
 							img(src="assets/img/logo.jpg", alt="")
 
-					.footer-contact
-						.footer-contact__icon
-							+svg('ic-address','ic-address', '18', '21')
-						.footer-contact__content
-							.footer-contact__label Адрес:
-							.footer-contact__text 164522, Архангельская область, Город Северодвинск, улица Трухинова, дом 6а, пом. 3Н
+					.footer-contact-wrap
+						.footer-contact.d-none.d-md-inline-flex
+							.footer-contact__icon
+								+svg('ic-address','ic-address', '18', '21')
+							.footer-contact__content
+								.footer-contact__label Адрес:
+								.footer-contact__text 164522, Архангельская область, Город Северодвинск, улица Трухинова, дом 6а, пом. 3Н
 
-					.footer-contact
-						.footer-contact__icon
-							+svg('ic-call','ic-call', '20', '20')
-						.footer-contact__content
-							.footer-contact__label Телефон:
-							.footer-contact__text
-								a.footer-contact__phone(href="tel:+78002507271") 8(800)250-72-71
-							.footer-contact__note Бесплатная горячая линия.
+						.footer-contact
+							.footer-contact__icon
+								+svg('ic-call','ic-call', '20', '20')
+							.footer-contact__content
+								.footer-contact__label Телефон:
+								.footer-contact__text
+									a.footer-contact__phone(href="tel:+78002507271") 8(800)250-72-71
+								.footer-contact__note Бесплатная горячая линия.
 
-					.footer-contact
-						.footer-contact__icon
-							+svg('ic-mail','ic-mail', '26', '21')
-						.footer-contact__content
-							.footer-contact__label Адрес: 
-							.footer-contact__text
-								a.footer-contact__mail(href="mailto:rostfinance@mail.ru") rostfinance@mail.ru
+						.footer-contact.d-none.d-md-inline-flex
+							.footer-contact__icon
+								+svg('ic-mail','ic-mail', '26', '21')
+							.footer-contact__content
+								.footer-contact__label Адрес: 
+								.footer-contact__text
+									a.footer-contact__mail(href="mailto:rostfinance@mail.ru") rostfinance@mail.ru
 
 
-				.footer-polit
+				.footer-polit.d-none.d-md-block
 					p © 2001-2021. АО «Альфа-Банк», официальный сайт. Генеральная лицензия Банка России № 1326 от 16 января 2015 г. АО АЛЬФА-БАНК является участником системы обязательного страхования вкладов. Информация о максимальных процентных ставках по вкладам физических лиц. Центр раскрытия корпоративной информации. Информация профессионального участника рынка ценных бумаг. Информация о лицах, под контролем либо значительным влиянием которых находится Банк. Ул.&nbsp;Каланчевская, 27, Москва, 107078. АО «Альфа-Банк» использует файлы «cookie» с целью персонализации сервисов и повышения удобства пользования веб-сайтом. Если Вы не хотите, чтобы Ваши пользовательские данные обрабатывались, пожалуйста, ограничьте их использование в своём браузере
 					p Настоящим я, свободно, своей волей и в своем интересе в соответствии с положениями Федерального закона от 27.07.2006 г. № 152-ФЗ «О персональных данных» (с&nbsp;изменениями и дополнениями) даю свое согласие: 
 						a(href="#") Подробнее о политике
+
+				.footer-polit.d-md-none
+					p © 2001-2021. АО «Альфа-Банк», официальный сайт. Генеральная лицензия Банка России № 1326 от 16 января 2015 г. АО АЛЬФА-БАНК 
+
+					.more-text.js-more-text
+						.more-text__top
+							.more-text__action.js-more-text-action
+								.more-text__label.js-more-text-label(data-text="Свернуть") Читать подробнее
+								.more-text__btn
+									+svg('ic-plus','ic-plus', '12', '12')
+
+						.more-text__content.js-more-text-content
+							p Настоящим я, свободно, своей волей и в своем интересе в соответствии с положениями Федерального закона от 27.07.2006 г. № 152-ФЗ «О персональных данных» (с&nbsp;изменениями и дополнениями) даю свое согласие: 
+					
+						.more-text__bottom
+							a(href="#") Политика конфиденциальности
+
+.move-up.js-move-up
+	+svg('ic-arrow-up','ic-arrow-up', '14', '8')
+	.move-up__text Наверх
