--- a/src/pug/pages/tipografika.pug
+++ b/src/pug/pages/tipografika.pug
@@ -157,6 +157,16 @@ block content
 
 					.type-icon__item
 						.type-icon__img
+							+svg('ic-arrow-up','ic-arrow-up', '14', '8')
+						.type-icon__name ic-arrow-up
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-arrow-down','ic-arrow-down', '14', '8')
+						.type-icon__name ic-arrow-down
+
+					.type-icon__item
+						.type-icon__img
 							+svg('ic-minus','ic-minus', '18', '2')
 						.type-icon__name ic-minus
 
@@ -164,3 +174,8 @@ block content
 						.type-icon__img
 							+svg('ic-plus','ic-plus', '18', '18')
 						.type-icon__name ic-plus
+
+					.type-icon__item
+						.type-icon__img
+							+svg('ic-close','ic-close', '12', '12')
+						.type-icon__name ic-close
