--- a/src/assets/scss/components/top-block.scss
+++ b/src/assets/scss/components/top-block.scss
@@ -8,12 +8,12 @@
 	&::before{
 		content: '';
 		display: block;
-		width: 1430px;
-		height: 656px;
+		width: 1092px;
+		height: 628px;
 		max-width: 100%;
 		max-height: 100%;
-		background: url(../img/girl-desktop.jpg) no-repeat center bottom;
-		background-size: cover;
+		background: url(../img/girl-desktop.png) no-repeat center bottom;
+		background-size: contain;
 		position: absolute;
 		bottom: 0;
 		right: 0;
@@ -52,7 +52,9 @@
 			width: 100%;
 			height: 224px;
 			background: url(../img/girl-mobile.png) no-repeat center;
-			position: static;
+			position: relative;
+            top: 20px;
+            margin-bottom: 20px;
 		}
 
 		.form-calc{margin-top: 50px;}
@@ -75,5 +77,27 @@
 			margin-top: 30px;
 			margin-bottom: -245px;
 		}
+	}
+}
+
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+	.top-block::before{
+		background:  url(../img/girl-mobile2x.png) no-repeat center;
+		background-size: contain;
+	}
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+	.top-block::before{
+		background:  url(../img/girl-mobile2x.png) no-repeat center;
+		background-size: contain;
+	}
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
+	.top-block::before{
+		background:  url(../img/girl-mobile2x.png) no-repeat center;
+		background-size: contain;
 	}
 }
