--- a/src/assets/scss/components/top-block.scss
+++ b/src/assets/scss/components/top-block.scss
@@ -1,6 +1,7 @@
 /*-------------- top-block -----------------*/
 .top-block{
-	background: #febd43;
+	background: #7aaa2b url(../img/bg-top-slider.jpg) top center no-repeat;
+	background-size: cover;
 	position: relative;
 	padding: 110px 0 0;
 	margin-bottom: 227px;
@@ -19,19 +20,22 @@
 		right: 0;
 	}
 
-	&__info{max-width: 40%;}
+	&__info{
+		max-width: 40%;
+		color: #fff;
+	}
 
 	&__title{
-		@include font(normal, bold, 4.8rem, 1.2, $color-text);
+		@include font(normal, bold, 4.8rem, 1.2, #fff);
 	}
 
 	&__text{
-		@include font(normal, 300, 2rem, 1.75, $color-text);
-		margin-top: 28px;
+		@include font(normal, 300, 2rem, 1.7, #fff);
+		margin-top: 25px;
 	}
 
 	&__label{
-		@include font(normal, bold, 2rem, 1.2, $color-text);
+		@include font(normal, bold, 2rem, 1.7, #fff);
 		text-transform: uppercase;
 		margin-top: 22px;
 	}
@@ -39,6 +43,12 @@
 	.form-calc{
 		margin-top: 100px;
 		margin-bottom: -130px;
+	}
+}
+
+@media (max-width: 1279px) {
+	.top-block{
+		&::before{width: 1110px;}
 	}
 }
 
@@ -51,10 +61,11 @@
 		&::before{
 			width: 100%;
 			height: 224px;
-			background: url(../img/girl-mobile.png) no-repeat center;
+			background:  url(../img/girl-mobile.png) no-repeat center;
+			background-size: contain;
 			position: relative;
-            top: 20px;
-            margin-bottom: 20px;
+			top: 20px;
+			margin-bottom: 20px;
 		}
 
 		.form-calc{margin-top: 50px;}
@@ -70,6 +81,8 @@
 	.top-block{
 		padding-top: 0;
 		margin-bottom: 284px;
+		background: url(../img/bg-top-slider-mob.png) top center no-repeat;
+		background-size: 100% 100%;
 
 		&__title{font-size: 2.8rem;}
 
@@ -79,7 +92,6 @@
 		}
 	}
 }
-
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 	.top-block::before{
